@@ -24,6 +24,8 @@ Optimizations
 
 * LUCENE-5798: Optimize MultiDocsEnum reuse. (Robert Muir)
 
+* LUCENE-5799: Optimize numeric docvalues merging. (Robert Muir)
+
 Test Framework
 
 * LUCENE-5786: Unflushed/ truncated events file (hung testing subprocess).
